# cmdpal-translate

./: Cargo.toml  README.md  build.rs
src/: main.rs  utils.rs
src/services/: google.rs  microsoft.rs  mod.rs
