[package]
name = "cmdpal-translate"
version = "0.1.0"
edition = "2024"

[dependencies]
cmdpal = { path = "../cmdpal" }
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
serde_json = "1.0.140"
windows = "0.61.3"

[build-dependencies]
cmdpal-packaging = { path = "../cmdpal/cmdpal-packaging" }
